--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#008577</color>
-  <color name="colorPrimaryDark">#00574B</color>
-  <color name="colorAccent">#D81B60</color>
+  <color name="primary">@color/purple_1000</color>
+  <color name="primaryDark">@color/purple_1100</color>
+  <color name="secondary">@color/skylight_sunset</color>
 </resources>
