--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="primary">@color/purple_1000</color>
-  <color name="primaryDark">@color/purple_1100</color>
-  <color name="secondary">@color/skylight_sunset</color>
+  <color name="primary">@color/blueGrey_900</color>
+  <color name="primaryDark">@color/blueGrey_900_dark</color>
+  <color name="secondary">@color/green_800</color>
+
+  <color name="windowBackground">@color/blueGrey_900_light</color>
 </resources>
