--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
 
   <style name="DarkTheme" parent="Theme.MaterialComponents">
     <item name="android:windowBackground">@color/windowBackground</item>
+    <item name="android:popupBackground">@drawable/popup_background</item>
   </style>
 
 </resources>
