--- a/views/src/main/res/layout/view_skylight_event.xml
+++ b/views/src/main/res/layout/view_skylight_event.xml
@@ -31,7 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="@string/dawn"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColor="?android:attr/textColorHint"
         android:visibility="invisible"
@@ -39,6 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/time"
         app:layout_constraintEnd_toEndOf="@+id/time"
 
+        tools:text="Dawn"
         tools:visibility="visible" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
