--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="cornerRadius_card">4dp</dimen>
-  <dimen name="padding_informativeText">8dp</dimen>
+
+  <dimen name="marginSides_mainText">16dp</dimen>
+  <dimen name="marginSides_mainCard">8dp</dimen>
+
+  <dimen name="elevation_toolbar">4dp</dimen>
+  <dimen name="divider_list">8dp</dimen>
 </resources>
