Replace old colors with new colors

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -8,7 +8,7 @@
 
   <!-- Land -->
   <path
-          android:fillColor="@color/purple_1100"
+          android:fillColor="@color/skylight_launcherIcon_ground"
           android:pathData="M0,60h108v108h-108z" />
 
 </vector>
