--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
   <solid
-      android:color="@color/popupBackground" />
+      android:color="?attr/colorPrimaryVariant" />
 
   <corners
       android:radius="2dp" />
