--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
       android:layout_width="match_parent"
       android:layout_height="0dp"
 
-      android:background="@color/primary"
+      android:background="?attr/colorPrimary"
       android:elevation="@dimen/elevation_toolbar"
 
       app:layout_constraintTop_toTopOf="@+id/locationSelector"
