--- a/views/src/main/res/values-v27/themes.xml
+++ b/views/src/main/res/values-v27/themes.xml
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+  <style name="SkylightDark" parent="SkylightDarkSdk27" />
+
+  <style name="SkylightDarkSdk27" parent="SkylightDarkSdk14">
+    <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
+  </style>
+
 </resources>
