--- a/views/src/main/res/values-v27/themes.xml
+++ b/views/src/main/res/values-v27/themes.xml
@@ -7,4 +7,10 @@
     <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
   </style>
 
+  <style name="SkylightLight" parent="SkylightLightSdk27" />
+
+  <style name="SkylightLightSdk27" parent="SkylightLightSdk14">
+    <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
+  </style>
+
 </resources>
