Add a little more red to darkest purple

--- a/views/src/main/res/values/colors_hues.xml
+++ b/views/src/main/res/values/colors_hues.xml
@@ -27,5 +27,5 @@
   <color name="skylight_darkPurple_light">#6a0080</color>
   <color name="skylight_darkPurple">#3a0053</color>
   <color name="skylight_darkPurple_dark">#1c002b</color>
-  <color name="skylight_darkPurple_extraDark">#020021</color>
+  <color name="skylight_darkPurple_extraDark">#0c0011</color>
 </resources>
