--- a/views/src/main/res/values/subthemes.xml
+++ b/views/src/main/res/values/subthemes.xml
@@ -2,9 +2,11 @@
 <resources>
   <style name="SkylightDark.AlertDialog" parent="Theme.MaterialComponents.Dialog.Alert">
     <item name="colorPrimary">@color/darkTheme_secondary</item>
+    <item name="android:background">@color/darkTheme_background</item>
   </style>
 
   <style name="SkylightLight.AlertDialog" parent="Theme.MaterialComponents.Light.Dialog.Alert">
     <item name="colorPrimary">@color/lightTheme_secondary</item>
+    <item name="android:background">@color/lightTheme_background</item>
   </style>
 </resources>
