--- a/views/src/main/res/values/themes.xml
+++ b/views/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
     <item name="colorPrimaryDark">@color/skylight_darkPurple_extraDark</item>
     <item name="colorPrimaryVariant">@color/skylight_darkPurple_light</item>
     <item name="colorSecondary">@color/darkTheme_secondary</item>
-    <item name="android:windowBackground">@color/skylight_darkPurple_dark</item>
+    <item name="android:colorBackground">@color/darkTheme_background</item>
 
     <item name="materialAlertDialogTheme">@style/SkylightDark.AlertDialog</item>
     <item name="alertDialogTheme">@style/SkylightDark.AlertDialog</item>
@@ -27,7 +27,7 @@
     <item name="colorPrimaryDark">@color/skylight_amber_dark</item>
     <item name="colorPrimaryVariant">@color/skylight_amber_light</item>
     <item name="colorSecondary">@color/lightTheme_secondary</item>
-    <item name="android:windowBackground">@color/skylight_amber_extraLight</item>
+    <item name="android:colorBackground">@color/lightTheme_background</item>
 
     <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
     <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
