Add public attrs for both dark and light theme colors
That children of each them can use elements from the opposite theme if desired

--- a/views/src/main/res/values/public_colors.xml
+++ b/views/src/main/res/values/public_colors.xml
@@ -4,4 +4,9 @@
   <public name="skylight_sunrise" type="color" />
   <public name="skylight_sunset" type="color" />
   <public name="skylight_dusk" type="color" />
+
+  <public name="skylight_launcherIcon_sun" type="color" />
+  <public name="skylight_launcherIcon_ground" type="color" />
+  <public name="skylight_launcherIcon_upperSky" type="color" />
+  <public name="skylight_launcherIcon_lowerSky" type="color" />
 </resources>
