--- a/views/src/main/res/values/themes.xml
+++ b/views/src/main/res/values/themes.xml
@@ -2,14 +2,16 @@
 <resources
     xmlns:tools="http://schemas.android.com/tools">
 
+  <!-- region Dark -->
   <style name="SkylightDark" parent="SkylightDarkSdk14" />
 
-  <style name="SkylightDarkSdk14" parent="Theme.MaterialComponents">
-    <item name="colorPrimary">@color/skylight_darkPurple</item>
-    <item name="colorPrimaryDark">@color/skylight_darkPurple_extraDark</item>
-    <item name="colorPrimaryVariant">@color/skylight_darkPurple_light</item>
-    <item name="colorSecondary">@color/darkTheme_secondary</item>
-    <item name="android:colorBackground">@color/darkTheme_background</item>
+  <style name="SkylightDarkSdk14" parent="SkylightDarkBase">
+    <item name="colorPrimary">?attr/darkThemeColorPrimary</item>
+    <item name="colorPrimaryDark">?attr/darkThemeColorPrimaryDark</item>
+    <item name="colorPrimaryVariant">?attr/darkThemeColorPrimaryVariant</item>
+    <item name="colorSecondary">?attr/darkThemeColorSecondary</item>
+    <item name="colorSecondaryVariant">?attr/darkThemeColorSecondaryVariant</item>
+    <item name="android:colorBackground">?attr/darkThemeColorBackground</item>
 
     <item name="materialAlertDialogTheme">@style/SkylightDark.AlertDialog</item>
     <item name="alertDialogTheme">@style/SkylightDark.AlertDialog</item>
@@ -20,14 +22,34 @@
     <item name="windowNoTitle">true</item>
   </style>
 
+  <!-- Common attributes (make sure these are the same as SkylightLightBase theme) -->
+  <style name="SkylightDarkBase" parent="Theme.MaterialComponents">
+    <item name="darkThemeColorPrimary">@color/skylight_darkPurple</item>
+    <item name="darkThemeColorPrimaryDark">@color/skylight_darkPurple_extraDark</item>
+    <item name="darkThemeColorPrimaryVariant">@color/skylight_darkPurple_light</item>
+    <item name="darkThemeColorSecondary">@color/darkTheme_secondary</item>
+    <item name="darkThemeColorSecondaryVariant">@color/skylight_amber</item>
+    <item name="darkThemeColorBackground">@color/darkTheme_background</item>
+
+    <item name="lightThemeColorPrimary">@color/skylight_amber</item>
+    <item name="lightThemeColorPrimaryDark">@color/skylight_amber_dark</item>
+    <item name="lightThemeColorPrimaryVariant">@color/skylight_amber_light</item>
+    <item name="lightThemeColorSecondary">@color/lightTheme_secondary</item>
+    <item name="lightThemeColorSecondaryVariant">@color/skylight_deepRed_extraLight</item>
+    <item name="lightThemeColorBackground">@color/lightTheme_background</item>
+  </style>
+  <!-- endregion -->
+
+  <!-- region Light -->
   <style name="SkylightLight" parent="SkylightLightSdk14" />
 
-  <style name="SkylightLightSdk14" parent="Theme.MaterialComponents.Light">
-    <item name="colorPrimary">@color/skylight_amber</item>
-    <item name="colorPrimaryDark">@color/skylight_amber_dark</item>
-    <item name="colorPrimaryVariant">@color/skylight_amber_light</item>
-    <item name="colorSecondary">@color/lightTheme_secondary</item>
-    <item name="android:colorBackground">@color/lightTheme_background</item>
+  <style name="SkylightLightSdk14" parent="SkylightLightBase">
+    <item name="colorPrimary">?attr/lightThemeColorPrimary</item>
+    <item name="colorPrimaryDark">?attr/lightThemeColorPrimaryDark</item>
+    <item name="colorPrimaryVariant">?attr/lightThemeColorPrimaryVariant</item>
+    <item name="colorSecondary">?attr/lightThemeColorSecondary</item>
+    <item name="colorSecondaryVariant">?attr/lightThemeColorSecondaryVariant</item>
+    <item name="android:colorBackground">?attr/lightThemeColorBackground</item>
 
     <item name="android:windowLightStatusBar" tools:targetApi="23">true</item>
     <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
@@ -40,5 +62,23 @@
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
   </style>
+
+  <!-- Common attributes (make sure these are the same as SkylightDarkBase theme) -->
+  <style name="SkylightLightBase" parent="Theme.MaterialComponents.Light">
+    <item name="darkThemeColorPrimary">@color/skylight_darkPurple</item>
+    <item name="darkThemeColorPrimaryDark">@color/skylight_darkPurple_extraDark</item>
+    <item name="darkThemeColorPrimaryVariant">@color/skylight_darkPurple_light</item>
+    <item name="darkThemeColorSecondary">@color/darkTheme_secondary</item>
+    <item name="darkThemeColorSecondaryVariant">@color/skylight_amber</item>
+    <item name="darkThemeColorBackground">@color/darkTheme_background</item>
+
+    <item name="lightThemeColorPrimary">@color/skylight_amber</item>
+    <item name="lightThemeColorPrimaryDark">@color/skylight_amber_dark</item>
+    <item name="lightThemeColorPrimaryVariant">@color/skylight_amber_light</item>
+    <item name="lightThemeColorSecondary">@color/lightTheme_secondary</item>
+    <item name="lightThemeColorSecondaryVariant">@color/skylight_deepRed_extraLight</item>
+    <item name="lightThemeColorBackground">@color/lightTheme_background</item>
+  </style>
+  <!-- endregion -->
 
 </resources>
