--- a/views/src/main/res/values/colors_hues.xml
+++ b/views/src/main/res/values/colors_hues.xml
@@ -29,5 +29,6 @@
   <color name="skylight_darkPurple_dark">#1c002b</color>
   <color name="skylight_darkPurple_extraDark">#0c0011</color>
 
-  <color name="skylight_pink_700">#c2185b</color>
+  <color name="skylight_pink_light">#f06292</color>
+  <color name="skylight_pink_dark">#c2185b</color>
 </resources>
