--- a/views/src/main/res/values/themes_common.xml
+++ b/views/src/main/res/values/themes_common.xml
@@ -8,6 +8,7 @@
     <item name="darkThemeColorSecondary">@color/darkTheme_secondary</item>
     <item name="darkThemeColorSecondaryVariant">@color/skylight_amber</item>
     <item name="darkThemeColorBackground">@color/darkTheme_background</item>
+    <item name="darkThemeColorError">@color/skylight_pink_light</item>
 
     <item name="lightThemeColorPrimary">@color/skylight_amber</item>
     <item name="lightThemeColorPrimaryDark">@color/skylight_amber_dark</item>
@@ -15,8 +16,7 @@
     <item name="lightThemeColorSecondary">@color/lightTheme_secondary</item>
     <item name="lightThemeColorSecondaryVariant">@color/skylight_deepRed_extraLight</item>
     <item name="lightThemeColorBackground">@color/lightTheme_background</item>
-
-    <item name="colorError">@color/skylight_pink_700</item>
+    <item name="lightThemeColorError">@color/skylight_pink_dark</item>
   </style>
 
   <style name="SkylightLightBase" parent="Theme.MaterialComponents.Light">
@@ -26,6 +26,7 @@
     <item name="darkThemeColorSecondary">@color/darkTheme_secondary</item>
     <item name="darkThemeColorSecondaryVariant">@color/skylight_amber</item>
     <item name="darkThemeColorBackground">@color/darkTheme_background</item>
+    <item name="darkThemeColorError">@color/skylight_pink_light</item>
 
     <item name="lightThemeColorPrimary">@color/skylight_amber</item>
     <item name="lightThemeColorPrimaryDark">@color/skylight_amber_dark</item>
@@ -33,7 +34,7 @@
     <item name="lightThemeColorSecondary">@color/lightTheme_secondary</item>
     <item name="lightThemeColorSecondaryVariant">@color/skylight_deepRed_extraLight</item>
     <item name="lightThemeColorBackground">@color/lightTheme_background</item>
+    <item name="lightThemeColorError">@color/skylight_pink_dark</item>
 
-    <item name="colorError">@color/skylight_pink_700</item>
   </style>
 </resources>
