Add attributes for event view text appearances

--- a/views/src/main/res/values/attrs_styleable.xml
+++ b/views/src/main/res/values/attrs_styleable.xml
@@ -2,6 +2,11 @@
 <resources>
   <declare-styleable name="SkylightEventView">
     <attr name="skylightEventLabelText" format="string" />
+    <attr name="skylightEventLabelTextAppearance" format="reference" />
+
     <attr name="skylightEventTimeText" format="string" />
+    <attr name="skylightEventTimeTextAppearance" format="reference" />
+    <attr name="skylightEventTimeTextMinSize" format="dimension" />
+    <attr name="skylightEventTimeTextMaxSize" format="dimension" />
   </declare-styleable>
 </resources>
