--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
 
       android:text="@string/all_times_local"
       android:textAppearance="@style/TextAppearance.AppCompat.Small"
-      android:textColor="?android:attr/textColorSecondary"
+      android:textColor="?android:attr/textColorHint"
 
       app:layout_constraintTop_toBottomOf="@+id/toolbar"
       app:layout_constraintBottom_toTopOf="@+id/dawn" />
@@ -136,11 +136,11 @@
 
       android:gravity="end"
       android:textAppearance="@style/TextAppearance.AppCompat.Small"
-      android:textColor="?android:attr/textColorHint"
+      android:textColor="?android:attr/textColorSecondary"
 
       app:layout_constraintTop_toBottomOf="@+id/dusk"
       app:layout_constraintBottom_toBottomOf="parent"
 
-      tools:text="Using Skylight version 1.0.0" />
+      tools:text="Skylight 1.0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
