--- a/app/src/main/res/layout/settings_destination.xml
+++ b/app/src/main/res/layout/settings_destination.xml
@@ -1,50 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RadioGroup
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
   <com.google.android.material.appbar.MaterialToolbar
       android:id="@+id/toolbar"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
+
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
 
       app:navigationIcon="@drawable/ic_close_24dp"
       app:title="@string/settings" />
 
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+  <RadioGroup
+      android:id="@+id/sourceSelection"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
 
+      android:clipToPadding="false"
+      android:divider="@drawable/list_divider"
       android:paddingStart="@dimen/marginSides_mainText"
       android:paddingEnd="@dimen/marginSides_mainText"
-      android:text="Source"
+      android:showDividers="beginning|end"
 
-      style="@style/TextAppearance.AppCompat.Subhead" />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/toolbar"
+      app:layout_constraintBottom_toBottomOf="parent">
 
-  <com.google.android.material.radiobutton.MaterialRadioButton
-      android:id="@+id/networkButton"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/divider_list"
 
-      android:text="Network (sunrise-sunset.org)"
+        android:text="Source"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-      tools:checked="true" />
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/networkButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-  <com.google.android.material.radiobutton.MaterialRadioButton
-      android:id="@+id/localButton"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+        android:text="Network (sunrise-sunset.org)"
 
-      android:text="Local (calculator)" />
+        tools:checked="true" />
 
-  <com.google.android.material.radiobutton.MaterialRadioButton
-      android:id="@+id/dummyButton"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/localButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-      android:text="Dummy" />
+        android:text="Local (calculator)" />
 
-</RadioGroup>
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/dummyButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="Dummy" />
+
+  </RadioGroup>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
