--- a/app/src/main/res/layout/main_destination.xml
+++ b/app/src/main/res/layout/main_destination.xml
@@ -49,7 +49,7 @@
       app:layout_constraintTop_toBottomOf="@+id/toolbar"
       app:layout_constraintBottom_toTopOf="@+id/dawn" />
 
-  <drewhamilton.skylight.views.event.SkylightEventView
+  <drewhamilton.skylight.android.views.event.SkylightEventView
       android:id="@+id/dawn"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -68,7 +68,7 @@
 
       tools:skylightEventTimeText="7:38 AM" />
 
-  <drewhamilton.skylight.views.event.SkylightEventView
+  <drewhamilton.skylight.android.views.event.SkylightEventView
       android:id="@+id/sunrise"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -87,7 +87,7 @@
 
       tools:skylightEventTimeText="7:38 AM" />
 
-  <drewhamilton.skylight.views.event.SkylightEventView
+  <drewhamilton.skylight.android.views.event.SkylightEventView
       android:id="@+id/sunset"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -106,7 +106,7 @@
 
       tools:skylightEventTimeText="7:38 AM" />
 
-  <drewhamilton.skylight.views.event.SkylightEventView
+  <drewhamilton.skylight.android.views.event.SkylightEventView
       android:id="@+id/dusk"
       android:layout_width="match_parent"
       android:layout_height="0dp"
